# ml-factory-project

./: .coverage  .env.example  .gitignore  README.md  docker-compose.yml  main.py  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
docs/source/: api.rst  conf.py  front.rst
mlartifacts/1/models/m-066b555337ac442c8bb01cc406a433c1/artifacts/: MLmodel  conda.yaml  model.pkl
mlartifacts/1/models/m-c117aea675e549beb260758856f73a42/artifacts/: MLmodel  model.pkl
public/: .buildinfo  api.html  front.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  train.html
public/.doctrees/: api.doctree  environment.pickle  front.doctree  index.doctree  readme.doctree  train.doctree
public/_modules/: index.html
public/_modules/src/api/: load_minio.html  load_model.html  main.html
public/_modules/src/front/: app.html
public/_modules/src/train/: train.html
public/_modules/src/train/services/: prep_data.html
public/_sources/: index.rst.txt  readme.rst.txt  train.rst.txt
src/api/: dockerfile  load_minio.py  load_model.py  main.py
src/front/: app.py  dockerfile
src/train/: train.py
src/train/services/: prep_data.py
tests/: conftest.py  test_api.py  test_front.py  test_train.py
