[project]
name = "ml-factory-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.68",
    "fastapi>=0.135.1",
    "minio>=7.2.20",
    "mlflow>=3.10.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]
